[tool.poetry]
name = "bss"
version = "0.1.0"
description = ""
authors = ["viktor <bnd-baza@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
ormar = "^0.10.18"
aiomysql = "^0.0.21"
alembic = "^1.7.1"
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
